--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="popover"></div>
+    <div id="modal"></div>
+    <div id="tooltip"></div>
+    <div id="toast"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
